# ice_cube

./: CMakeLists.txt  LICENSE  planning.txt
dependencies/glad/: glad.h
liquidcore/: CMakeLists.txt  liquidcore.h
liquidcore/include/: core.h
liquidcore/src/: application.cpp  application.h
liquideditor/src/: liquidworksApp.cpp
res/shaders/: basic.shader
src/: glad.c  glad.h  main.cpp  shader.cpp  shader.h
src/core/: application.cpp
src/core/include/: application.h  core.h
src/logging/: logger.cpp  logger.h
